<resources>
    <string name="app_name">BirdsOfAFeather</string>
    <string name="name_confirm">Confirm</string>
    <string name="name_hint">Name</string>
    <string name="name_prompt">Please confirm or edit your display name:</string>
    <string name="web_client_ID">541625132620-45snujia8hrevihbq1lbi1p9g7udupa5.apps.googleusercontent.com</string>
    <string name="enter_class_info_label">Enter Class Info</string>
    <string name="year_label">Year :</string>
    <string name="quarter_label">Quarter :</string>
    <string name="subject_label">Subject :</string>
    <string name="course_num_label">Course# :</string>
    <string name="course_size_label">Course Size :</string>
    <string name="year_example">E.g. 2021</string>
    <string name="quarter_example">E.g. FA</string>
    <string name="subject_example">E.g. CSE</string>
    <string name="course_example">E.g. 110</string>
    <string name="matched_bof_label">Matched BoF</string>
    <string name="close">Close</string>
    <string name="matched_courses">Matched Courses: %1$d</string>
    <string name="photo_url_prompt">Please upload your profile picture in\nURL format in the box below.</string>
    <string name="url_hint">URL</string>
    <string name="submit">Submit</string>
    <string name="url_ending_restriction">.jpg or .png only</string>
    <string name="view_favorites">View Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="prioritize_label">Prioritize by:</string>
    <string-array name="priority_array">
        <item>Common Courses</item>
        <item>This Quarter</item>
        <item>Class Size</item>
        <item>Recent Classes</item>
        <item>Waved At By</item>
    </string-array>
    <string-array name="class_size_array">
        <item>Tiny (below 40)</item>
        <item>Small (40-75)</item>
        <item>Medium (75-150)</item>
        <item>Large (150-250)</item>
        <item>Huge (250-400)</item>
        <item>Gigantic (400+)</item>
    </string-array>
    <string name="wave_checkbox_label">Wave At User</string>
</resources>