...
        android:text="Nearby Mock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sessions_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_courses_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="686dp"
        android:layout_marginBottom="32dp"
        android:onClick="onAddCoursesClicked"
        android:text="Add Courses"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/view_favorites_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matched_students_view" />

...
